--- a/index.html
+++ b/index.html
@@ -15,11 +15,22 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
   </head>
   <body>
-  	<h1>Hello World!</h1>
-  	<h2>testing</h2>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+  	<div class="container">
+	  	<br><br><br>
+	  	<p class="title large">Welcome</p>
+	  	<br><br><br>
+	  	<p class="title sub">Official website of Michael Krause</p>
+	  	<br><br><br>
+	  	<div class="row">
+  			<div class="col-sm-4"><br></div>
+  			<div class="col-sm-2"><br><center><div id="codeImage"></div></center></div>
+  			<div class="col-sm-2"><br><center><div id="tweetImage"></div></center></div>
+	  		<div class="col-sm-4"><br></div>
+	  	</div>
+	    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	    <!-- Include all compiled plugins (below), or include individual files as needed -->
+	    <script src="js/bootstrap.min.js"></script>
+    </div>
   </body>
 </html>
