--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 	  	<p class="title large">Welcome</p>
 	  	<br><br><br>
 	  	<p class="title sub">Official website of Michael Krause</p>
-	  	<br><br><br>
+	  	<br>
+	  	<p class="par">Coder. Student. Dreamer.</p>
+	  	<br>
 	  	<div class="row">
   			<div class="col-sm-4"><br></div>
   			<div class="col-sm-2"><br><center><div id="codeImage"></div></center></div>
