--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 						Welcome
 					</div>
 					<div class="about-text">
-						I am a high school student who is fairly cool and does a bunch of cool stuff. Not only do I do things with code, but I want to do engineering stuff too, it's just that nobody is letting me. Thanks Governor's School.
+						I'm Michael Krause, a high school student attending Thomas Jefferson High School for Science and Technology in Alexandria, VA.
 					</div>
 				</div>
 			</section>
