content updates, removed src.

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 						Welcome
 					</div>
 					<div class="about-text">
-						I'm Michael Krause, a high school student attending Thomas Jefferson High School for Science and Technology in Alexandria, VA.
+						I'm Michael Krause, a high school student attending Thomas Jefferson High School for Science and Technology in Alexandria, VA. I like code.
 					</div>
 				</div>
 			</section>
