--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+	<!-- meta tags for responsiveness-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
 	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="js/jquery.onepage-scroll.js"></script>
 	<!--<script type="text/javascript" src="js/scroller-color-fix.js"></script>-->
