--- a/site/index.html
+++ b/site/index.html
@@ -104,7 +104,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>My Resume</h2>
-                    <p>Check it out.</p>
+                    <p>Feel free to take a look!</p>
                     <a href="/downloads/resume.pdf" class="btn btn-default btn-lg">Download as PDF</a>
                 </div>
             </div>
