--- a/site/index.html
+++ b/site/index.html
@@ -118,9 +118,20 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Projects</h2>
                 <p>Some of the projects I've worked on over the years:</p>
-                <h3>TJ Time</h3>
-                <p>A project to help TJ Students get around school on time and in the know</p>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-lg-offset-2">
+                <h3><a href="http://mk2018.github.io/tjTimeFaceC/">TJ Time Pebble Watchface</a></h3>
+                <p>A watchface for the Pebble smartwatch that displays relevant daily schedule information to keep TJ students on-time and in the know.</p>
+            </div>
+            <div class="col-lg-4">
+                <h3><a href="http://mk2018.github.io/QuickJS/">Quick.JS</a></h3>
+                <br>
+                <br>
+                <p>A Javascipt framework aimed at simplifying the process of building Single Page Applications.</p>
+            </div>
+        </div>
         </div>
     </section>
 
@@ -132,13 +143,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <h2>Contact Me</h2>
-                        <p>Feel free to send me an email, and please check out my GitHub and Twitter (maybe?) for more.</p>
+                        <p>Feel free to send me an email, and please check out my GitHub for more.</p>
                         <p><a href="mailto:mekva@outlook.com">mekva@outlook.com</a>
                         </p>
                         <ul class="list-inline banner-social-buttons">
-                            <li>
-                                <a href="https://twitter.com/2018_mk/" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                            </li>
                             <li>
                                 <a href="https://github.com/mk2018/" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
@@ -152,7 +160,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; 2016 -  Michael Krause </p>
+            <p>Copyright &copy; 2016 -  Michael Krause. WIP.</p>
         </div>
     </footer>
 
