--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
 ---
-layout: homepage
-#I personally find this page to be the most interesting in the entire project. The only reason it exists is to automate the 
-#date in the copyright on the bottom of the page. How interesting. A nice, JS-free solution.
+layout: construction
 ---
